src/test/ui/resolve/issue-24968.rs
fn foo(_: Self) {
//~^ ERROR cannot find type `Self`
}

fn main() {}
